# cdds-util-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
cdds-util/: Cargo.toml  build.rs
examples/: disco.rs  discoverer.rs
src/: lib.rs
