[package]
name = "cdds-util"
version = "0.1.1"
authors = ["Esteve Fernandez <esteve@apache.org>", "kydos <angelo@icorsaro.net>"]
edition = "2018"
build="build.rs"
repository = "https://github.com/atolab/cdds-util-rs"
homepage = "https://github.com/atolab/cdds-util-rs"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Cyclone DDS and some cyclone utils low-level Rust bindings."


[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1.44"

[dependencies]
libc = "0.2.77"

[[example]]
name = "discoverer"
path = "examples/discoverer.rs"
